--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -13,7 +13,8 @@
 <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navigationbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/about"> About <span class="sr-only">(current)</span></a></li>
+        <!--class="active" allows highlight-->
+        <li class="nav navbar-nav"><a href="/about"> About <span class="sr-only">(current)</span></a></li>
         <!-- <li><a href="#">Link</a></li> -->
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
