--- a/app/views/textbooks/edit.html.erb
+++ b/app/views/textbooks/edit.html.erb
@@ -6,7 +6,7 @@
 
 		<%= render 'form' %>
 
-		<%= link_to 'Show', @textbook %> |
+		<!--<%= link_to 'Show', @textbook %> | -->
 		<%= link_to 'Back to list', textbooks_path %>
 
 </div>
