--- a/app/views/textbooks/index.html.erb
+++ b/app/views/textbooks/index.html.erb
@@ -40,4 +40,4 @@
 
 <br>
 
-<%= link_to 'New Textbook', new_textbook_path %>
+<%= link_to 'New Textbook', new_textbook_path, class: "btn btn-primary" %>
