--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -14,8 +14,8 @@
     <div class="collapse navbar-collapse" id="navigationbar">
       <ul class="nav navbar-nav">
         <!--<li class="nav navbar-nav"><a href="/about">About <span class="sr-only">(current)</span></a></li>-->
-        <li class="active"><a href="/pages/about">About <span class="sr-only">(current)</span></a></li>
-        <!-- <li><a href="#">Link</a></li> -->
+        <!--<li class="active"><a href="/about">About <span class="sr-only">(current)</span></a></li>-->
+        <li><a href="/about">About </a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
           <ul class="dropdown-menu">
