--- a/app/views/textbooks/new.html.erb
+++ b/app/views/textbooks/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-offset-4 col-xs-4 col-xs-offset-4">
 
-		<h1>New Textbook</h1>
+		<h1>Sell your Textbook!</h1>
 
 		<%= render 'form' %>
 
