--- a/app/views/textbooks/index.html.erb
+++ b/app/views/textbooks/index.html.erb
@@ -3,7 +3,7 @@
       <div class="col-sm-12">
                   
          <table class = "table table-striped">
-            <h1>Listing Textbooks</h1>
+            <h1>Listing of Textbook Deals</h1>
             <caption>Click on a textbook title to view it</caption>
             
             <thead>
@@ -31,8 +31,13 @@
         </td><%end%>
         <td><%= textbook.created_at.strftime("%d %b. %Y") %></td>
         <!--<td><%= link_to 'Show', textbook %></td>-->
-        <td><%= link_to 'Edit', edit_textbook_path(textbook) %></td>
-        <td><%= link_to 'Destroy', textbook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%if textbook.user_email == current_user.email %>
+          <td><%= link_to 'Edit', edit_textbook_path(textbook) %></td>
+          <td><%= link_to 'Destroy', textbook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%else %>
+          <td></td>
+          <td></td>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
@@ -40,4 +45,4 @@
 
 <br>
 
-<%= link_to 'New Textbook', new_textbook_path, class: "btn btn-primary" %>
+<%= link_to 'Sell Textbook', new_textbook_path, class: "btn btn-primary" %>
