--- a/app/views/textbooks/show.html.erb
+++ b/app/views/textbooks/show.html.erb
@@ -16,8 +16,7 @@
 
 		<p>
 		  <strong>Price:</strong>
-		  $
-		  <%= @textbook.price %>
+		  $<%= @textbook.price %>
 		</p>
 
 		<p>
@@ -30,13 +29,25 @@
 		</p>
 
 		<p>
+		  <strong>Description:</strong>
+		  <%= @textbook.description %>
+		</p>
+
+		<p>
 		  <strong>Time:</strong>
 		  <%= @textbook.created_at.strftime("%d %b. %Y") %>
 		</p>
 
+		<%if @textbook.user_email == current_user.email %>
+        	<%= link_to 'Edit', edit_textbook_path(@textbook) %> |
+			<%= link_to 'Back to list', textbooks_path %>
+        <%else %>
+        	<%= link_to 'Back to list', textbooks_path %>
+        <%end%>
+<!--
 		<%= link_to 'Edit', edit_textbook_path(@textbook) %> |
 		<%= link_to 'Back to list', textbooks_path %>
-
+-->
 </div>
 </div>
 </div>
