--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,10 @@
         <br><br><br>
         <div class="text-center">
             <% if user_signed_in? %>
-              	<h2>Welcome <%= current_user.email %> to Udeal!</h2>
+              <% @userName = current_user.email.split('@') %>
+              
+              	<!--<h2>Welcome <%= current_user.email %> to Udeal!</h2>-->
+                <h2>Welcome <%= @userName.at(0) %> to Udeal!</h2>
           	<% else %>
                 <h2>Welcome to Udeal!</h2>
               	<h2><%= link_to "Signup", new_user_registration_path, class: "btn btn-primary" %></h2>
