--- a/app/views/textbooks/index.html.erb
+++ b/app/views/textbooks/index.html.erb
@@ -3,7 +3,7 @@
       <div class="col-sm-12">
                   
          <table class = "table table-striped">
-            <h1>Listing of Textbook Deals</h1>
+            <h1>Textbook Deals</h1>
             <caption>Click on a textbook title to view it</caption>
             
             <thead>
@@ -16,33 +16,51 @@
                </tr>
             </thead>
 
-  <tbody>
-    <% @textbooks.each do |textbook| %>
-      <tr>
-        <!--<td><%= textbook.title %></td>-->
-        <td><%=link_to "#{textbook.title}", textbook_path(textbook.id) %></td>
-        <td><%= textbook.subject %></td>
-        <td>$<%= textbook.price %></td>
-        <td>
-          <% if textbook.offer == true %>
-            <%= "\u2713" %>
-          <% else %>
-            <%= "\u2715" %>
-        </td><%end%>
-        <td><%= textbook.created_at.strftime("%d %b. %Y") %></td>
-        <!--<td><%= link_to 'Show', textbook %></td>-->
-        <%if textbook.user_email == current_user.email %>
-          <td><%= link_to 'Edit', edit_textbook_path(textbook) %></td>
-          <td><%= link_to 'Destroy', textbook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <%else %>
-          <td></td>
-          <td></td>
-        <%end%>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <tbody>
+            <% @textbooks.each do |textbook| %>
+              <tr>
+                <!--<td><%= textbook.title %></td>-->
+                <td><%=link_to "#{textbook.title}", textbook_path(textbook.id) %></td>
+                <td><%= textbook.subject %></td>
+                <td>$<%= textbook.price %></td>
+                <td>
+                  <% if textbook.offer == true %>
+                    <%= "\u2713" %>
+                  <% else %>
+                    <%= "\u2715" %>
+                </td><%end%>
+                <td><%= textbook.created_at.strftime("%d %b. %Y") %></td>
+                <!--<td><%= link_to 'Show', textbook %></td>-->
+                <%if textbook.user_email == current_user.email %>
+                  <td><%= link_to 'Edit', edit_textbook_path(textbook) %></td>
+                  <td><%= link_to 'Destroy', textbook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <%else %>
+                  <td></td>
+                  <td></td>
+                <%end%>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
 
-<br>
+        <br>
 
-<%= link_to 'Sell Textbook', new_textbook_path, class: "btn btn-primary" %>
+        <div>
+          <%= form_tag textbooks_path, :method => :get do %>
+          <p>
+            <a style="color:#000000" title="Suggest!" data-toggle="popover" data-trigger="hover" data-content="Title or Subject"><%= text_field_tag :search, params[:search] %></a>
+            <%= submit_tag "Search", :title => nil, class: "btn btn-success btn-sm" %>
+          <% end %>
+        </div>
+
+        <%= link_to 'Sell Textbook', new_textbook_path, class: "btn btn-primary" %>
+
+        <script>
+        $(document).ready(function(){
+            $('[data-toggle="popover"]').popover();   
+        });
+        </script>
+
+    </div>
+  </div>
+</div>
